chapter 6.2.3 실습까지 끝

--- a/StringCtrlSample/CMakeLists.txt
+++ b/StringCtrlSample/CMakeLists.txt
@@ -3,5 +3,5 @@ project(StringCtrlSample)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(StringCtrlSample main.cpp CMyString/CMyString.cpp CMyString/CMyString.h)
+add_executable(StringCtrlSample main.cpp CMyString/CMyString.cpp CMyString/CMyString.h CMyStringEx/CMyStringEx.cpp CMyStringEx/CMyStringEx.h)
 #add_executable(StringCtrlSample main.cpp CMyString/CMyString.cpp)
